Day3 강의장 버젼, 리뷰 후 완성 되면 공지

--- a/1.Movielens 데이터셋.ipynb
+++ b/1.Movielens 데이터셋.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "04ddf9a0-9c0a-4912-8fb7-9a87cf88263c",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.12.9 (main, Mar 15 2025, 13:36:28) [GCC 13.3.0]\n",
+      "Python 3.12.9 (main, Mar 17 2025, 10:20:52) [GCC 13.3.0]\n",
       "pandas 2.2.3\n",
       "numpy 2.1.3\n"
      ]
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "3720519c-a121-4dd8-ac4d-159eb09f5542",
    "metadata": {},
    "outputs": [],
@@ -87,32 +87,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "70fe6168-b2cc-4467-9676-534e1c2c3d49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['.ipynb_checkpoints',\n",
-       " 'movies.csv',\n",
-       " 'movies_100k.csv',\n",
-       " 'ratings.csv',\n",
-       " 'ratings_100k.csv',\n",
-       " 'tmdb_movie_emb.pkl',\n",
-       " 'tmdb_movie_emb_kr.pkl',\n",
-       " 'tmdb_movie_info.pkl',\n",
-       " 'tmdb_movie_info_kr.pkl',\n",
-       " 'users_100k.csv']"
+       "(['movies.csv',\n",
+       "  'movies_100k.csv',\n",
+       "  'ratings.csv',\n",
+       "  'ratings_100k.csv',\n",
+       "  'tmdb_movie_emb.pkl',\n",
+       "  'tmdb_movie_emb_kr.pkl',\n",
+       "  'tmdb_movie_info.pkl',\n",
+       "  'tmdb_movie_info_kr.pkl',\n",
+       "  'users_100k.csv'],\n",
+       " 9)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "os.listdir('dataset')"
+    "os.listdir('dataset'), len(os.listdir('dataset'))"
    ]
   },
   {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "7107bf7e-029a-47ec-bf19-c5811088b5d6",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
        "[943 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "13e78a0d-d32a-46be-a0b0-ca75fe3d82ef",
    "metadata": {},
    "outputs": [
@@ -832,7 +832,7 @@
        "[100000 rows x 4 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "e26ec272-3074-4ec4-9e4c-fc6cea108c24",
    "metadata": {},
    "outputs": [
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "572068f8-9d46-440b-9c85-6e3fc57ddf0d",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sun9sun9/python312/lib/python3.12/site-packages/pandas/io/formats/format.py:1458: RuntimeWarning: overflow encountered in cast\n",
+      "/home/rcmd/python312/lib/python3.12/site-packages/pandas/io/formats/format.py:1458: RuntimeWarning: overflow encountered in cast\n",
       "  has_large_values = (abs_vals > 1e6).any()\n"
      ]
     },
@@ -1050,7 +1050,7 @@
        "[25000095 rows x 4 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "9c5e6a57-36c0-41cb-8b21-fbc7b795f52e",
    "metadata": {},
    "outputs": [
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "5007e037-457c-4017-b099-395c87456325",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1232,7 @@
        "[62423 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "8a546579-2251-4f07-babc-7c2ab3f3f430",
    "metadata": {},
    "outputs": [
@@ -1312,7 +1312,7 @@
        " 'vote_count': 16869}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "4c6ce47a-acd2-40bc-b143-5544139eeead",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1372,7 @@
        " 'vote_count': 16869}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "118b153a-2f95-4002-8ffc-c7333af613e9",
    "metadata": {},
    "outputs": [
@@ -1426,7 +1426,7 @@
        "       -0.00891308, -0.01079059])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,6 +1436,29 @@
     "with open('dataset/tmdb_movie_emb_kr.pkl', 'rb') as f:\n",
     "    dic_movie_emb = pickle.load(f)\n",
     "dic_movie_emb[1] # movieId = 1(Toy Story)의 줄거리 수치화 정보입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "aff12605-4f57-4d16-82d5-7f30a3d4c2ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.00791671, -0.03155841,  0.00588331, ..., -0.00125478,\n",
+       "        -0.00891308, -0.01079059]),\n",
+       " (1536,))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic_movie_emb[1], dic_movie_emb[1].shape"
    ]
   },
   {
@@ -1473,28 +1496,6 @@
     "with open('dataset/tmdb_movie_emb.pkl', 'rb') as f:\n",
     "    dic_movie_emb = pickle.load(f)\n",
     "dic_movie_emb[1] # movieId = 1(Toy Story)의 줄거리 수치화 정보입니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "402e9c9d-cbbe-4bc6-92b0-bae18724b6e1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1536,)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Embedding의 크기를 출력합니다.\n",
-    "dic_movie_emb[1].shape"
    ]
   },
   {
