--- a/5.Matrix Factorization2.ipynb
+++ b/5.Matrix Factorization2.ipynb
@@ -2933,6 +2933,159 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "5366e238-d9fe-43de-9434-7620611fd16c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m488/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>release_date</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>171011</th>\n",
+       "      <td>Planet Earth II (2016)</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>2017-04-18 08:53:17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171495</th>\n",
+       "      <td>Cosmos</td>\n",
+       "      <td>(no genres listed)</td>\n",
+       "      <td>2017-05-18 18:54:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136445</th>\n",
+       "      <td>George Carlin: Back in Town (1996)</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>1996-03-30 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27423</th>\n",
+       "      <td>O Auto da Compadecida (Dog's Will, A) (2000)</td>\n",
+       "      <td>Adventure|Comedy</td>\n",
+       "      <td>2000-09-15 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140265</th>\n",
+       "      <td>George Carlin: Jammin' in New York (1992)</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>1992-04-25 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121374</th>\n",
+       "      <td>Bill Burr: Why Do I Do This? (2008)</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>2008-08-23 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163809</th>\n",
+       "      <td>Over the Garden Wall (2013)</td>\n",
+       "      <td>Adventure|Animation|Drama</td>\n",
+       "      <td>2016-09-11 07:00:46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159817</th>\n",
+       "      <td>Planet Earth (2006)</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>2016-06-05 11:25:40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6981</th>\n",
+       "      <td>Ordet (Word, The) (1955)</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>1955-01-09 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105250</th>\n",
+       "      <td>Century of the Self, The (2002)</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>2013-10-11 07:16:17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                title  \\\n",
+       "movieId                                                 \n",
+       "171011                         Planet Earth II (2016)   \n",
+       "171495                                         Cosmos   \n",
+       "136445             George Carlin: Back in Town (1996)   \n",
+       "27423    O Auto da Compadecida (Dog's Will, A) (2000)   \n",
+       "140265      George Carlin: Jammin' in New York (1992)   \n",
+       "121374            Bill Burr: Why Do I Do This? (2008)   \n",
+       "163809                    Over the Garden Wall (2013)   \n",
+       "159817                            Planet Earth (2006)   \n",
+       "6981                         Ordet (Word, The) (1955)   \n",
+       "105250                Century of the Self, The (2002)   \n",
+       "\n",
+       "                            genres        release_date  \n",
+       "movieId                                                 \n",
+       "171011                 Documentary 2017-04-18 08:53:17  \n",
+       "171495          (no genres listed) 2017-05-18 18:54:13  \n",
+       "136445                      Comedy 1996-03-30 00:00:00  \n",
+       "27423             Adventure|Comedy 2000-09-15 00:00:00  \n",
+       "140265                      Comedy 1992-04-25 00:00:00  \n",
+       "121374                      Comedy 2008-08-23 00:00:00  \n",
+       "163809   Adventure|Animation|Drama 2016-09-11 07:00:46  \n",
+       "159817                 Documentary 2016-06-05 11:25:40  \n",
+       "6981                         Drama 1955-01-09 00:00:00  \n",
+       "105250                 Documentary 2013-10-11 07:16:17  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prd = a_model.predict(\n",
+    "    tf.data.Dataset.from_tensor_slices(\n",
+    "        {'userId': [3] * len(df_movie), 'movieId': df_movie.index.tolist(), \n",
+    "         'prev_movieId': [10000] * len(df_movie), 'prev_rating': [5] * len(df_movie)}\n",
+    "    ).batch(128)\n",
+    ")\n",
+    "df_movie.iloc[np.argsort(-np.squeeze(prd))[:10]]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2b51cc5a-335e-4ab5-9cf2-27e75df1de9d",
    "metadata": {},
@@ -3770,7 +3923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 113,
    "id": "d015171a-93eb-49b1-9f9c-31f8a896b509",
    "metadata": {},
    "outputs": [],
@@ -3778,12 +3931,22 @@
     "class MovieInfoModel(tf.keras.Model):\n",
     "    def __init__(self, df_movieinfo, movie_model, emb_config, rank, l2=0):\n",
     "        super().__init__()\n",
-    "        self.lu_movie = tf.keras.layers.IntegerLookup(vocabulary=df_movieinfo.index[1:].values)\n",
-    "        # TODO-with 영화 별 장르 정보를 담고 저장공간생성\n",
-    "        \n",
-    "        # TODO-with 영화의 컬렉션 정보를 지니고 있는 저장공간 생성\n",
-    "\n",
-    "        # TODO-with 영화의 제목 + 줄거리의 OpenAI에서 구한 Embedding 정보 저장공간 생성\n",
+    "        self.lu_movie = tf.keras.layers.IntegerLookup(\n",
+    "            vocabulary=df_movieinfo.index[1:].values\n",
+    "        )\n",
+    "        # 영화 별 장르 정보를 담고 저장공간생성\n",
+    "        cols_genre = df_movieinfo.columns[2:].tolist()\n",
+    "        self.genres = tf.constant(\n",
+    "            df_movieinfo[cols_genre]\n",
+    "        )\n",
+    "        # 영화의 컬렉션 정보를 지니고 있는 저장공간 생성\n",
+    "        self.collection = tf.constant(\n",
+    "            df_movieinfo['collection']\n",
+    "        )\n",
+    "        # 영화의 제목 + 줄거리의 OpenAI에서 구한 Embedding 정보 저장공간 생성\n",
+    "        self.ov_emb = tf.constant(\n",
+    "            df_movieinfo['ov_emb'].tolist()\n",
+    "        )\n",
     "        \n",
     "        self.movie_model = movie_model\n",
     "        if l2 > 0:\n",
@@ -3793,7 +3956,7 @@
     "        self.emb_collection = tf.keras.layers.Embedding(\n",
     "            df_movieinfo['collection'].max() + 1, \n",
     "            emb_config['collection'], \n",
-    "            embeddings_regularizer=reg\n",
+    "            embeddings_regularizer = reg\n",
     "        )\n",
     "\n",
     "        # 은닉레이어 1: Dense(64)\n",
@@ -3805,17 +3968,19 @@
     "        # 출력 레이어: Dense(rank)\n",
     "        self.o = tf.keras.layers.Dense(rank)\n",
     "        # 결합 레이어\n",
-    "        self.cc = # TODO-with\n",
+    "        self.cc = tf.keras.layers.Concatenate(axis = -1)\n",
     "    \n",
     "    def call(self, x, training=False):\n",
     "        x_movie = self.movie_model(x, training=training)\n",
     "        \n",
     "        x = self.lu_movie(x)\n",
-    "        x_genre = # TODO-with 장르 여부를 가져옵니다.\n",
-    "        x_collection = # TODO-with 컬렉션 번호 가져옵니다.\n",
-    "        x_collection = # TODO-with 컬렉션 임베딩을 가져옵니다.\n",
-    "        x_ov_emb =  # TODO-with OpenAI API를 얻은 영화 줄거리의 Embedding 정보를 가져 옵니다.\n",
-    "        x =  # TODO-with x_movie, x_genre, x_collection, x_ov_emb를 결합하여 하나의 텐서로 만듭니다.\n",
+    "        x_genre = tf.gather(self.genres, x) # 장르 여부를 가져옵니다.\n",
+    "        x_collection = tf.gather(self.collection, x) # 컬렉션 번호 가져옵니다.\n",
+    "        x_collection = self.emb_collection(x_collection) # 컬렉션 임베딩을 가져옵니다.\n",
+    "        x_ov_emb =  tf.gather(self.ov_emb, x) # OpenAI API를 얻은 영화 줄거리의 Embedding 정보를 가져 옵니다.\n",
+    "        x =  self.cc([\n",
+    "            x_movie, x_genre, x_collection, x_ov_emb\n",
+    "        ]) # x_movie, x_genre, x_collection, x_ov_emb를 결합하여 하나의 텐서로 만듭니다.\n",
     "        x = self.dl(x)\n",
     "        return self.o(x)"
    ]
@@ -3830,7 +3995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 114,
    "id": "9ebc9d67-b444-4fa9-8b26-e2ab4f92d79e",
    "metadata": {},
    "outputs": [
@@ -3838,11 +4003,11 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(2, 1), dtype=float32, numpy=\n",
-       "array([[-0.00213949],\n",
-       "       [ 0.08772888]], dtype=float32)>"
+       "array([[-0.01635799],\n",
+       "       [ 0.02778567]], dtype=float32)>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3862,7 +4027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 115,
    "id": "5a021a05-2a89-430d-81a8-1f7ca3cf7b9c",
    "metadata": {},
    "outputs": [
@@ -3870,11 +4035,11 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(2, 1), dtype=float32, numpy=\n",
-       "array([[3.5803373],\n",
-       "       [3.4919791]], dtype=float32)>"
+       "array([[3.5289445],\n",
+       "       [3.447373 ]], dtype=float32)>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3888,7 +4053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 116,
    "id": "d18eaf1a-2ab2-48f1-8376-ea3c671eba06",
    "metadata": {},
    "outputs": [
@@ -3896,11 +4061,11 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(2, 1), dtype=float32, numpy=\n",
-       "array([[3.5781977],\n",
-       "       [3.579708 ]], dtype=float32)>"
+       "array([[3.5125866],\n",
+       "       [3.4751587]], dtype=float32)>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3913,7 +4078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 118,
    "id": "5144e3bb-f573-4172-9424-c990f066db0a",
    "metadata": {},
    "outputs": [
@@ -3923,9 +4088,9 @@
      "text": [
       "Downloading...\n",
       "From (original): https://drive.google.com/uc?id=1mnsZI6GreAJSw0IqcLP8mf50TgnmF711\n",
-      "From (redirected): https://drive.google.com/uc?id=1mnsZI6GreAJSw0IqcLP8mf50TgnmF711&confirm=t&uuid=8c56abb4-dcb9-4d6e-a397-91381fd689e3\n",
-      "To: /mnt/d/work/lecture/rcmd_course/mf2_2.pkl\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████| 764M/764M [05:55<00:00, 2.15MB/s]\n"
+      "From (redirected): https://drive.google.com/uc?id=1mnsZI6GreAJSw0IqcLP8mf50TgnmF711&confirm=t&uuid=d116eec4-aa43-4d9f-a1f2-1e6f66ea8357\n",
+      "To: /mnt/d/rcmd/mf2_2.pkl\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████| 764M/764M [00:16<00:00, 46.8MB/s]\n"
      ]
     },
     {
@@ -4185,11 +4350,9 @@
     "# mf2_2.pkl 이 있으면 학습 산출물을 불러오고, 결과를 출력하고, 기존의 모델을 불러옵니다.\n",
     "model_filename = os.path.join('model', 'mf2_2.pkl')\n",
     "\n",
-    "\"\"\"\n",
     "if not os.path.exists(model_filename):\n",
     "    o = gdown.download(\"https://drive.google.com/uc?id=1mnsZI6GreAJSw0IqcLP8mf50TgnmF711\", quiet=False)\n",
     "    os.rename(o, model_filename)\n",
-    "\"\"\"\n",
     "\n",
     "if not os.path.isfile(model_filename):\n",
     "    rank = 32\n",
@@ -4263,7 +4426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 119,
    "id": "b142d68f-480f-4fdc-91cc-2a3bca2980c3",
    "metadata": {},
    "outputs": [
@@ -4271,18 +4434,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1173/1173\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 3ms/step\n"
+      "\u001b[1m1173/1173\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 5ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "userCnt\n",
-       "[0.0, 1.0)         0.793274\n",
-       "[1.0, 140.0)       0.759628\n",
-       "[140.0, 500.0)     0.702044\n",
-       "[500.0, 1000.0)    0.606085\n",
-       "[1000.0, inf)      0.604568\n",
+       "[0.0, 1.0)         0.793298\n",
+       "[1.0, 140.0)       0.759649\n",
+       "[140.0, 500.0)     0.702082\n",
+       "[500.0, 1000.0)    0.606124\n",
+       "[1000.0, inf)      0.604586\n",
        "dtype: float64"
       ]
      },
@@ -4294,11 +4457,11 @@
       "text/plain": [
        "movieCnt\n",
        "[0.0, 1.0)           0.947339\n",
-       "[1.0, 100.0)         0.818523\n",
-       "[100.0, 1000.0)      0.746761\n",
-       "[1000.0, 5000.0)     0.776393\n",
-       "[5000.0, 10000.0)    0.773560\n",
-       "[10000.0, inf)       0.734186\n",
+       "[1.0, 100.0)         0.818565\n",
+       "[100.0, 1000.0)      0.746799\n",
+       "[1000.0, 5000.0)     0.776407\n",
+       "[5000.0, 10000.0)    0.773579\n",
+       "[10000.0, inf)       0.734215\n",
        "dtype: float64"
       ]
      },
@@ -4322,7 +4485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 120,
    "id": "308f1041-ed49-447c-b371-067b424aa542",
    "metadata": {
     "tags": []
