--- a/0.환경구성.ipynb
+++ b/0.환경구성.ipynb
@@ -505,21 +505,25 @@
    "id": "d8f6748a-0ee8-42aa-a6c4-db8cf9533b1f",
    "metadata": {},
    "source": [
-    "# 폐쇄망에서 구성하는 법\n",
+    "## Docker 구동 및 이미지 만들기를 통한 폐쇄망에서의 환경 구성 \n",
     "\n",
-    "폐쇄망에서는 위 패키지가 있는 저장소(Repository)에 접근을 할 수 없어 설치를 할 수 없습니다. \n",
-    "\n",
-    "따라서, 인터넷이 접근이 되는 환경에서 패키지 설치 파일을 다운로드 받아서, 저장 장치에 담아 \n",
-    "\n",
-    "옮겨 놓고 설치해합니다.\n",
-    "\n",
-    "- 다운로드 받기\n",
+    "**이미지 빌드**\n",
     "```\n",
-    "pip download -r requirements.txt -d ./downloads\n",
+    "docker build -t rcmd_2503 .\n",
     "```\n",
-    "- 다운로드 받은 패키지 설치하기\n",
+    "**이미지 저장**\n",
     "```\n",
-    "pip install ./downloads/*\n",
+    "docker save -o rcmd_2503.tar rcmd_2503\n",
+    "```\n",
+    "\n",
+    "**이미지 불러오기**\n",
+    "```\n",
+    "docker load -i rcmd_2503.tar\n",
+    "```\n",
+    "\n",
+    "**이미지 실행**\n",
+    "```\n",
+    "docker run --gpus all --rm -p 8888:8888 rcmd_2503\n",
     "```"
    ]
   },
