--- a/1.Movielens 데이터셋.ipynb
+++ b/1.Movielens 데이터셋.ipynb
@@ -10,9 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.12.9 (main, Mar 17 2025, 10:20:52) [GCC 13.3.0]\n",
+      "Python 3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
       "pandas 2.2.3\n",
-      "numpy 2.1.3\n"
+      "numpy 1.26.4\n"
      ]
     }
    ],
@@ -57,10 +57,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "3720519c-a121-4dd8-ac4d-159eb09f5542",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1SX84B13wp4OFP8W1lPjJNK3NZewEKGg_\n",
+      "To: /home/sun9sun9/jnote/rcmd_2503/movies_100k.csv\n",
+      "100%|█████████████████████████████████████████| 134k/134k [00:00<00:00, 744kB/s]\n",
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1ey4ilNGEtcHiVLzQZ5j8dQsv98Nv46pC\n",
+      "To: /home/sun9sun9/jnote/rcmd_2503/ratings_100k.csv\n",
+      "100%|██████████████████████████████████████| 1.98M/1.98M [00:01<00:00, 1.38MB/s]\n",
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1ekjE0fPq5YF06X0vTdtnX57hE0PsLK-R\n",
+      "To: /home/sun9sun9/jnote/rcmd_2503/users_100k.csv\n",
+      "100%|███████████████████████████████████████| 22.7k/22.7k [00:00<00:00, 374kB/s]\n",
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1N-WAyRgx69S8bEnK3jE29NDXR0NgA5rg\n",
+      "To: /home/sun9sun9/jnote/rcmd_2503/movies.csv\n",
+      "100%|██████████████████████████████████████| 3.04M/3.04M [00:01<00:00, 1.72MB/s]\n",
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?id=1Nm2Gu6UYg_-4T-7MilJA4jdvdOE19qcb\n",
+      "From (redirected): https://drive.google.com/uc?id=1Nm2Gu6UYg_-4T-7MilJA4jdvdOE19qcb&confirm=t&uuid=c62e3ab4-7bc1-4f3b-8375-62ba11cee375\n",
+      "To: /home/sun9sun9/jnote/rcmd_2503/ratings.csv\n",
+      "100%|████████████████████████████████████████| 678M/678M [02:03<00:00, 5.47MB/s]\n",
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?id=1KUJDU81o2S4KLO4ohKkyqpCg-60pw2gM\n",
+      "From (redirected): https://drive.google.com/uc?id=1KUJDU81o2S4KLO4ohKkyqpCg-60pw2gM&confirm=t&uuid=8ffbd686-7d01-4381-a72d-e1ff58fdf6da\n",
+      "To: /home/sun9sun9/jnote/rcmd_2503/tmdb_movie_emb_kr.pkl\n",
+      "100%|████████████████████████████████████████| 759M/759M [01:33<00:00, 8.11MB/s]\n",
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?id=1oS1MC0SOS7wFTg_hdbrR0uvGXoc6sR3G\n",
+      "From (redirected): https://drive.google.com/uc?id=1oS1MC0SOS7wFTg_hdbrR0uvGXoc6sR3G&confirm=t&uuid=e4cda958-c06c-4024-97d8-10df22e391b7\n",
+      "To: /home/sun9sun9/jnote/rcmd_2503/tmdb_movie_emb.pkl\n",
+      "100%|████████████████████████████████████████| 759M/759M [01:21<00:00, 9.27MB/s]\n",
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1YEXzzE7YdoqsY6wIKSCdhpHUfb_Eynrv\n",
+      "To: /home/sun9sun9/jnote/rcmd_2503/tmdb_movie_info_kr.pkl\n",
+      "100%|██████████████████████████████████████| 70.3M/70.3M [00:10<00:00, 6.51MB/s]\n",
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1hbKv1E7mXnK6yKtoGNsU7pQviKtihHH5\n",
+      "To: /home/sun9sun9/jnote/rcmd_2503/tmdb_movie_info.pkl\n",
+      "100%|██████████████████████████████████████| 74.0M/74.0M [00:12<00:00, 5.88MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# 데이터를 다운로드 받습니다.\n",
     "if not os.path.exists('dataset'):\n",
@@ -87,26 +133,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "70fe6168-b2cc-4467-9676-534e1c2c3d49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['movies.csv',\n",
-       "  'movies_100k.csv',\n",
+       "(['users_100k.csv',\n",
        "  'ratings.csv',\n",
-       "  'ratings_100k.csv',\n",
-       "  'tmdb_movie_emb.pkl',\n",
        "  'tmdb_movie_emb_kr.pkl',\n",
        "  'tmdb_movie_info.pkl',\n",
+       "  'tmdb_movie_emb.pkl',\n",
+       "  'movies_100k.csv',\n",
        "  'tmdb_movie_info_kr.pkl',\n",
-       "  'users_100k.csv'],\n",
+       "  'ratings_100k.csv',\n",
+       "  'movies.csv'],\n",
        " 9)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "21999fcb-0dae-4cbf-9398-52efc857f954",
    "metadata": {},
    "outputs": [
@@ -538,7 +584,7 @@
        "[1682 rows x 21 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "7107bf7e-029a-47ec-bf19-c5811088b5d6",
    "metadata": {},
    "outputs": [
@@ -689,7 +735,7 @@
        "[943 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "13e78a0d-d32a-46be-a0b0-ca75fe3d82ef",
    "metadata": {},
    "outputs": [
@@ -832,7 +878,7 @@
        "[100000 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "e26ec272-3074-4ec4-9e4c-fc6cea108c24",
    "metadata": {},
    "outputs": [
@@ -911,18 +957,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "572068f8-9d46-440b-9c85-6e3fc57ddf0d",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rcmd/python312/lib/python3.12/site-packages/pandas/io/formats/format.py:1458: RuntimeWarning: overflow encountered in cast\n",
-      "  has_large_values = (abs_vals > 1e6).any()\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1050,7 +1088,7 @@
        "[25000095 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "9c5e6a57-36c0-41cb-8b21-fbc7b795f52e",
    "metadata": {},
    "outputs": [
@@ -1105,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "5007e037-457c-4017-b099-395c87456325",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1270,7 @@
        "[62423 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "8a546579-2251-4f07-babc-7c2ab3f3f430",
    "metadata": {},
    "outputs": [
@@ -1312,7 +1350,7 @@
        " 'vote_count': 16869}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "4c6ce47a-acd2-40bc-b143-5544139eeead",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1410,7 @@
        " 'vote_count': 16869}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "118b153a-2f95-4002-8ffc-c7333af613e9",
    "metadata": {},
    "outputs": [
@@ -1426,7 +1464,7 @@
        "       -0.00891308, -0.01079059])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "aff12605-4f57-4d16-82d5-7f30a3d4c2ba",
    "metadata": {},
    "outputs": [
@@ -1452,7 +1490,7 @@
        " (1536,))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "8bb766f1-665d-447d-8816-2362b12140d3",
    "metadata": {},
    "outputs": [
@@ -1486,7 +1524,7 @@
        "       -0.0124166 , -0.02548294])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,7 +1561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
