--- a/0.환경구성.ipynb
+++ b/0.환경구성.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.12.9 (main, Mar 18 2025, 00:02:07) [GCC 13.3.0]\n"
+      "Python 3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "('numpy', '2.1.3')"
+       "('numpy', '1.26.4')"
       ]
      },
      "execution_count": 3,
@@ -129,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "('scipy', '1.15.2')"
+       "('scipy', '1.12.0')"
       ]
      },
      "execution_count": 4,
@@ -166,7 +166,7 @@
     {
      "data": {
       "text/plain": [
-       "('sklearn', '1.6.1')"
+       "('sklearn', '1.5.2')"
       ]
      },
      "execution_count": 5,
@@ -202,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "('matplotlib', '3.10.1')"
+       "('matplotlib', '3.8.4')"
       ]
      },
      "execution_count": 6,
@@ -267,21 +267,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "02d7b336-f6af-4849-afb3-3c11481b56bc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('lightgbm', '4.6.0')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    import lightgbm as lgb\n",
@@ -310,7 +299,7 @@
     {
      "data": {
       "text/plain": [
-       "('kiwipiepy', '0.20.4')"
+       "('kiwipiepy', '0.17.1')"
       ]
      },
      "execution_count": 9,
@@ -350,20 +339,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-19 08:58:32.575451: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-03-20 04:32:08.293192: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1742374712.590974      69 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1742374712.595893      69 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1742374712.608224      69 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1742374712.608238      69 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1742374712.608240      69 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1742374712.608241      69 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n"
+      "E0000 00:00:1742445128.425012   30099 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1742445128.462265   30099 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "('tensorflow', '2.19.0')"
+       "('tensorflow', '2.18.0')"
       ]
      },
      "execution_count": 10,
@@ -432,10 +417,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "026b1aaf-dd48-4080-a1bb-d13cff0f966f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting gdown\n",
+      "  Downloading gdown-5.2.0-py3-none-any.whl.metadata (5.8 kB)\n",
+      "Requirement already satisfied: beautifulsoup4 in /home/sun9sun9/python312/lib/python3.12/site-packages (from gdown) (4.12.3)\n",
+      "Requirement already satisfied: filelock in /home/sun9sun9/python312/lib/python3.12/site-packages (from gdown) (3.16.1)\n",
+      "Requirement already satisfied: requests[socks] in /home/sun9sun9/python312/lib/python3.12/site-packages (from gdown) (2.32.3)\n",
+      "Requirement already satisfied: tqdm in /home/sun9sun9/python312/lib/python3.12/site-packages (from gdown) (4.66.4)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /home/sun9sun9/python312/lib/python3.12/site-packages (from beautifulsoup4->gdown) (2.5)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/sun9sun9/python312/lib/python3.12/site-packages (from requests[socks]->gdown) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/sun9sun9/python312/lib/python3.12/site-packages (from requests[socks]->gdown) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/sun9sun9/python312/lib/python3.12/site-packages (from requests[socks]->gdown) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/sun9sun9/python312/lib/python3.12/site-packages (from requests[socks]->gdown) (2024.2.2)\n",
+      "Collecting PySocks!=1.5.7,>=1.5.6 (from requests[socks]->gdown)\n",
+      "  Downloading PySocks-1.7.1-py3-none-any.whl.metadata (13 kB)\n",
+      "Downloading gdown-5.2.0-py3-none-any.whl (18 kB)\n",
+      "Downloading PySocks-1.7.1-py3-none-any.whl (16 kB)\n",
+      "Installing collected packages: PySocks, gdown\n",
+      "Successfully installed PySocks-1.7.1 gdown-5.2.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    import gdown\n",
@@ -491,10 +503,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "41b48168-ba4e-41cc-9944-4e92ae63fad5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thu Mar 20 04:32:12 2025       \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 550.127.05             Driver Version: 550.127.05     CUDA Version: 12.4     |\n",
+      "|-----------------------------------------+------------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                        |               MIG M. |\n",
+      "|=========================================+========================+======================|\n",
+      "|   0  NVIDIA GeForce RTX 2060        Off |   00000000:01:00.0 Off |                  N/A |\n",
+      "| 24%   45C    P0             N/A /  160W |       1MiB /   6144MiB |      0%      Default |\n",
+      "|                                         |                        |                  N/A |\n",
+      "+-----------------------------------------+------------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                              |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
+      "|        ID   ID                                                               Usage      |\n",
+      "|=========================================================================================|\n",
+      "|  No running processes found                                                             |\n",
+      "+-----------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "# GPU 모니터링 툴을 구동을 시켜 봅니다. GPU가 WSL 상에서 잘 잡히는지 봅니다.\n",
     "!nvidia-smi"
@@ -552,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
