--- a/4.Matrix Factorization1.ipynb
+++ b/4.Matrix Factorization1.ipynb
@@ -2527,7 +2527,7 @@
     "\n",
     "Netflix Competition에서 1위 팀이 사용한 모델의 핵심 부분입니다.\n",
     "\n",
-    "[https://datajobs.com/data-science-repo/Recommender-Systems-[Netflix].pdf](Matrix Factorization Techniques For Recommender)\n",
+    "[Matrix Factorization Techniques For Recommender](https://datajobs.com/data-science-repo/Recommender-Systems-[Netflix].pdf)\n",
     "\n",
     "$\\hat{r}_{ui} = \\bar{r} + \\bar{r_u} + \\bar{r_i} + ue_u \\cdot ie_i$\n",
     "\n",
